src/objects/BuildDetails__c.object
<CustomObject>
    <fields>
        <fullName>ApplicationVersion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RevisionEnd__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RevisionEnd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevisionStart__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RevisionStart</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Build Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Description__c</columns>
        <columns>ApplicationVersion__c</columns>
        <columns>RevisionEnd__c</columns>
        <columns>RevisionStart__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Build Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Build Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>